versions/26.1.2/translated/ru_ru/develop/entities/effects.md
---
title: Эффекты мобов
description: Узнайте, как добавлять эффекты для мобов.
authors:
  - dicedpixels
  - Friendly-Banana
  - Manchick0
  - SattesKrokodil
  - FireBlast
  - YanisBft
authors-nogithub:
  - siglong
  - tao0lu
resources:
  https://docs.neoforged.net/docs/items/mobeffects: Эффекты мобов - Документация NeoForge (кроме Зелий)
---

Эффекты мобов, также известные как статусные эффекты (status effects) или просто эффекты (effects), представляют собой состояние, которое может влиять на сущность. Они могут сказываться положительно, отрицательно или нейтрально на сущности. В обычном случае в игре эти эффекты применяются несколькими способами, такими как поедание еды, распитие зелий и так далее.

Можно использовать команду `/effect` для применения эффектов к сущности.

## Пользовательские эффекты мобов {#custom-mob-effects}

В этом руководстве мы добавим новый эффект под названием _Tater_, который даёт игроку одно очко опыта каждый игровой такт.

### Расширение `MobEffect` {#extend-mobeffect}

Давайте создадим класс нашего эффекта, который будет наследовать основной класс всех эффектов — `MobEffect`.

<<< @/reference/26.1.2/src/main/java/com/example/docs/effect/TaterEffect.java#effect

### Регистрация своего эффекта {#registering-your-custom-effect}

Схожим с регистрацией блоков и предметов образом, мы используем `Registry.register`, чтобы зарегистрировать наш эффект в реестре `MOB_EFFECT`. Это можно сделать в нашем инициализаторе.

<<< @/reference/26.1.2/src/main/java/com/example/docs/effect/ExampleModEffects.java#register_effect

### Текстура

Иконка эффекта представляет собой PNG-файл размером 18×18 пикселей. Поместите свою иконку в папку:

```text:no-line-numbers
resources/assets/example-mod/textures/mob_effect/tater.png
```

<DownloadEntry visualURL="/assets/develop/tater-effect.png" downloadURL="/assets/develop/tater-effect-icon.png">Пример текстуры</DownloadEntry>

### Переводы {#translations}

Как и любой другой перевод, вы можете добавить запись с ID формата `"effect.example-mod.effect-identifier": "Значение"` в
языковой файл.

```json
{
  "effect.example-mod.tater": "Tater"
}
```

### Применение эффекта {#applying-the-effect}

Стоит взглянуть на то, как вы обычно применяете эффект к объекту.

::: tip

Для быстрой проверки, возможно, будет лучше использовать упомянутую ранее команду `/effect`:

```mcfunction
effect give @p example-mod:tater
```

:::

Чтобы применить эффект внутри, вам нужно использовать метод `LivingEntity#addEffect`, который принимает
`MobEffectInstance` и возвращает логическое значение, указывающее, был ли эффект успешно применен.

<<< @/reference/26.1.2/src/main/java/com/example/docs/ReferenceMethods.java#apply_effect

| Аргумент    | Тип                 | Описание                                                                                                                                                                                                                                                                                                                    |
| ----------- | ------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `effect`    | `Holder<MobEffect>` | Контейнер, представляющий эффект.                                                                                                                                                                                                                                                                           |
| `duration`  | `int`               | Продолжительность эффекта **в тиках**; **не** секундах                                                                                                                                                                                                                                                                      |
| `amplifier` | `int`               | Усилитель соответствует уровню эффекта. Это не соответствует **уровню** эффекта, а скорее добавляется сверху. Следовательно, `усилитель` на уровне `4` => уровень `5`                                                                                                                       |
| `ambient`   | `boolean`           | Это очень сложный вопрос. Это в основном указывает на то, что эффект был добавлен окружающей средой (например, **Маяком**) и не имеет прямой причины. Если установлено значение `true`, то на экране появится значок эффекта с аквамариновым наложением. |
| `particles` | `boolean`           | Показывать ли частицы.                                                                                                                                                                                                                                                                                      |
| `icon`      | `boolean`           | Отображать ли значок эффекта в HUD. Эффект будет отображаться в инвентаре независимо от этого флага.                                                                                                                                                                                        |

::: info

::: info
Чтобы узнать, как создать зелье, накладывающее этот эффект, ознакомьтесь с руководством по [зельям](../items/potions).

:::

<!---->
